--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,19 @@
-.container{
+.sketchpad{
     height: 960px;
     width:960px;
     background-color: rgb(255, 255, 254);
     display: flex;
     flex-direction: column;
     border: 1px solid black;
+}
+.content{
+    display: flex;
+    justify-content: space-around;
+}
+.options{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
 }
 .rowdiv{
     display: flex;
